fix: hide xp icon on mobile to fix screen overflow. - improve overall visuals

--- a/assets/css/app/home.css
+++ b/assets/css/app/home.css
@@ -426,11 +426,7 @@
     height: 140px;
   }
 
-  /* .stats-grid {
-    grid-template-columns: 1fr;
+  .hero-content .date {
+    align-items: flex-start;
   }
-
-  .stat-card{
-    justify-content: flex-start;
-  } */
 }
