--- a/assets/css/portal.css
+++ b/assets/css/portal.css
@@ -262,6 +262,7 @@
 
 @media (max-width: 600px) {
   .section-content-wrapper {
+    margin-bottom: var(--spacing-xxl);
     padding: 0;
   }
 
@@ -279,7 +280,7 @@
     align-items: center;
   }
 
-  #header-user-name {
+  .xp-wrap{
     display: none;
   }
 
